--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
@@ -81,9 +80,9 @@ img {
 }
 
 .training-card {
-  background-color: #718096
+  background-color: #718096;
   color: white;
-  padding: 3rem
+  padding: 3rem;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   min-height: 300px;
